# nautilus-backend

./: .dockerignore  Dockerfile  Dockerfile.prod  Dockerfile.staging  README.md  attendancePolicy.json  competitions.json  main.py  pyproject.toml  railway.toml  version.json
.github/: ci-staging.yml
.github/workflows/: ci-prod.yml  ci-staging.yml  codeql.yml
app/: __init__.py  config.py  permissions.py  routes.py
app/controllers/: account_controller.py  attendance_controller.py
app/routes/: account_routes.py  attendance_routes.py  auth_routes.py  meeting_routes.py  utils.py
app/schemas/: attendance_schema.py  auth_schema.py  register_schema.py  scouting_schema.py  utils.py
app/services/: account_service.py
k8s/: production-manifests.yml  staging-manifests.yml
nautilus_api/: __init__.py  config.py  tba_client.py
nautilus_api/controllers/: account_controller.py  attendance_controller.py  notification_controller.py  scouting_controller.py  utils.py
nautilus_api/models/: schemas.py
nautilus_api/routes/: account_routes.py  attendance_routes.py  auth_routes.py  meeting_routes.py  notification_routes.py  pitscouting_routes.py  scouting_routes.py  tba_routes.py  utils.py
nautilus_api/schemas/: attendance_schema.py  auth_schema.py  notification_schema.py  utils.py
nautilus_api/services/: account_service.py  attendance_service.py  notification_service.py  opr_service.py  scouting_service.py  tba_service.py
nautilus_api/utils/: cache.py  errors.py  opr_math.py
src/api/: __init__.py
