[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Arshan <111618520+ArshansGithub@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
quart = "^0.19.6"
quart-schema = "^0.20.0"

[tool.poetry.scripts]
start = "api:run"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
